--- a/index.html
+++ b/index.html
@@ -551,9 +551,9 @@
                 </ul><!--cs-->
 
                 <ul class="sns">
-                    <li><a href="#"><img src="imges/sns1.png" alt=""></a></li>
-                    <li><a href="#"><img src="imges/sns2.png" alt=""></a></li>
-                    <li><a href="#"><img src="imges/sns3.png" alt=""></a></li>
+                    <li><a href="#"><img src="imges/fsns1.png" alt=""></a></li>
+                    <li><a href="#"><img src="imges/fsns2.png" alt=""></a></li>
+                    <li><a href="#"><img src="imges/fsns3.png" alt=""></a></li>
                 </ul><!--sns-->
             </div><!--f1-->
 
