--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <main>
         <div class="mWrap">
             <div class="mpic">
-                <img src="imges/bbg_mo.png" class="bg_mo">
+                <img src="imges/bbg_mo.jpg" class="bg_mo">
             </div>
             <div class="txt">
                 <h2>NATUREHIKE IN SUSTAINABILITY</h2>
@@ -232,7 +232,7 @@
                     <div class="item item1">
                        <a href="#">
                         <div class="pic">
-                            <img src="imges/Glamping.png" alt="글램핑">
+                            <img src="imges/Glamping.jpg" alt="글램핑">
                         </div><!--pic-->
 
                         <div class="txt">
@@ -292,7 +292,7 @@
                     <div class="item item2">
                         <a href="#">
                          <div class="pic">
-                             <img src="imges/Backpacking.png" alt="백패킹">
+                             <img src="imges/Backpacking.jpg" alt="백패킹">
                          </div><!--pic-->
                      
                          <div class="txt">
@@ -352,7 +352,7 @@
                      <div class="item item3">
                         <a href="#">
                          <div class="pic">
-                             <img src="imges/Supernova.png" alt="슈퍼노바">
+                             <img src="imges/Supernova.jpg" alt="슈퍼노바">
                          </div><!--pic-->
                      
                          <div class="txt">
